--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,39 +1,43 @@
-name: iOS Build without Signing
+name: Build iOS App
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    # Step 1: Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.6'  # Ensure this version includes Dart 3.5.2
+    # Step 2: Set up Flutter environment and use the desired version
+    - name: Set up Flutter environment
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.5.2' # Set this to the required version
 
-      - name: Set up Flutter
-        run: flutter pub get
+    # Step 3: Install Flutter dependencies
+    - name: Install dependencies
+      run: flutter pub get
 
-      - name: Install CocoaPods dependencies
-        run: |
-          cd ios
-          pod install
-        working-directory: ./ios
+    # Step 4: Set up CocoaPods (for iOS)
+    - name: Install CocoaPods dependencies
+      run: |
+        cd ios
+        pod install
+      working-directory: ios
 
-      - name: Build iOS without signing
-        run: |
-          flutter build ios --no-codesign
+    # Step 5: Build the iOS app without signing
+    - name: Build iOS without code signing
+      run: flutter build ios --no-codesign
 
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ios-build
-          path: build/ios/ipa
+    # Step 6: Archive build artifacts
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: ios-app
+        path: build/ios/iphoneos
