--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,4 +1,4 @@
-name: Build iOS App
+name: Build iOS without signing
 
 on:
   push:
@@ -7,37 +7,25 @@ on:
 
 jobs:
   build:
+    name: Build iOS
     runs-on: macos-latest
 
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.10.5' # Specify a compatible version
 
-    # Step 2: Set up Flutter environment and use the desired version
-    - name: Set up Flutter environment
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.5.2' # Set this to the required version
+      - name: Install dependencies
+        run: flutter pub get
 
-    # Step 3: Install Flutter dependencies
-    - name: Install dependencies
-      run: flutter pub get
+      - name: Install CocoaPods dependencies
+        run: |
+          cd ios
+          pod install
 
-    # Step 4: Set up CocoaPods (for iOS)
-    - name: Install CocoaPods dependencies
-      run: |
-        cd ios
-        pod install
-      working-directory: ios
-
-    # Step 5: Build the iOS app without signing
-    - name: Build iOS without code signing
-      run: flutter build ios --no-codesign
-
-    # Step 6: Archive build artifacts
-    - name: Archive build artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: ios-app
-        path: build/ios/iphoneos
+      - name: Build iOS without code signing
+        run: flutter build ios --no-codesign
