--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.5' # Specify a compatible version
+          flutter-version: '3.13.0' # Use a Flutter version with Dart SDK 3.5.x
 
       - name: Install dependencies
         run: flutter pub get
