--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,4 +1,4 @@
-name: Build iOS without signing
+name: Build iOS
 
 on:
   push:
@@ -7,25 +7,25 @@ on:
 
 jobs:
   build:
-    name: Build iOS
     runs-on: macos-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v2
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.13.0' # Use a Flutter version with Dart SDK 3.5.x
-
+          flutter-version: '3.10.6'  # Specify a version that matches your Dart version
+      
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Install CocoaPods dependencies
-        run: |
-          cd ios
-          pod install
-
-      - name: Build iOS without code signing
+      - name: Build iOS (Without Code Signing)
         run: flutter build ios --no-codesign
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: iOS Build
+          path: build/ios/ipa/
