--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,4 +1,4 @@
-name: Build iOS
+name: Build iOS IPA
 
 on:
   push:
@@ -6,26 +6,29 @@ on:
       - main
 
 jobs:
-  build:
+  build-ios:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.10.6'  # Specify a version that matches your Dart version
-      
-      - name: Install dependencies
-        run: flutter pub get
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: 'stable'
 
-      - name: Build iOS (Without Code Signing)
-        run: flutter build ios --no-codesign
+    - name: Install dependencies
+      run: flutter pub get
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: iOS Build
-          path: build/ios/ipa/
+    - name: Clean the project
+      run: flutter clean
+
+    - name: Build iOS without signing
+      run: flutter build ios --no-codesign
+
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: ios-build
+        path: build/ios/iphoneos/*.ipa
