--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,40 +1,55 @@
-name: Build iOS IPA without signing
+name: Build iOS App
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build-ios:
-    name: Build iOS IPA
     runs-on: macos-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.10.6'
-
-    - name: Install Dependencies
-      run: flutter pub get
+        flutter-version: '3.10.6'  # Updated to 3.10.6
 
     - name: Install CocoaPods Dependencies
-      working-directory: ios
-      run: pod install
+      run: |
+        cd ios
+        pod install
 
-    - name: Build iOS without Code Signing
+    - name: Flutter clean
+      run: flutter clean
+
+    - name: Flutter pub get
+      run: flutter pub get
+
+    - name: Build iOS without code signing
       run: flutter build ios --no-codesign
 
-    - name: List build directory (Debugging Step)
-      run: ls -R build/ios
+    - name: Archive the iOS build
+      run: |
+        mkdir -p build/ios/ipa
+        xcodebuild -workspace ios/Runner.xcworkspace \
+          -scheme Runner \
+          -sdk iphoneos \
+          -configuration Release \
+          archive -archivePath build/ios/archive/Runner.xcarchive
 
-    - name: Archive iOS build artifacts
+    - name: Export IPA
+      run: |
+        xcodebuild -exportArchive \
+          -archivePath build/ios/archive/Runner.xcarchive \
+          -exportOptionsPlist ios/Flutter/ExportOptions.plist \
+          -exportPath build/ios/ipa
+
+    - name: Upload IPA as Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: ios-ipa
-        path: build/ios/iphoneos/*.ipa
+        name: Runner.ipa
+        path: build/ios/ipa/*.ipa
