--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.10.6'  # Updated to 3.10.6
+        flutter-version: '3.10.6'
 
     - name: Install CocoaPods Dependencies
       run: |
@@ -31,7 +31,8 @@ jobs:
       run: flutter pub get
 
     - name: Build iOS without code signing
-      run: flutter build ios --no-codesign --release
+      run: |
+        flutter build ios --no-codesign --release
 
     - name: Archive the iOS build
       run: |
@@ -40,14 +41,16 @@ jobs:
           -scheme Runner \
           -sdk iphoneos \
           -configuration Release \
-          archive -archivePath build/ios/archive/Runner.xcarchive
+          archive -archivePath build/ios/archive/Runner.xcarchive \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO
 
     - name: Export IPA
       run: |
         xcodebuild -exportArchive \
           -archivePath build/ios/archive/Runner.xcarchive \
           -exportOptionsPlist ios/Flutter/ExportOptions.plist \
-          -exportPath build/ios/ipa
+          -exportPath build/ios/ipa \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO
 
     - name: Upload IPA as Artifact
       uses: actions/upload-artifact@v2
