--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -21,7 +21,6 @@ jobs:
     - name: Install CocoaPods Dependencies
       run: |
         cd ios
-        pod init
         pod install
 
     - name: Flutter clean
@@ -34,7 +33,7 @@ jobs:
       run: |
         flutter build ios --no-codesign --release
 
-    - name: Archive the iOS build
+    - name: Archive the iOS build without signing
       run: |
         mkdir -p build/ios/ipa
         xcodebuild -workspace ios/Runner.xcworkspace \
@@ -42,15 +41,15 @@ jobs:
           -sdk iphoneos \
           -configuration Release \
           archive -archivePath build/ios/archive/Runner.xcarchive \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
 
-    - name: Export IPA
+    - name: Export IPA without signing
       run: |
         xcodebuild -exportArchive \
           -archivePath build/ios/archive/Runner.xcarchive \
           -exportOptionsPlist ios/Flutter/ExportOptions.plist \
           -exportPath build/ios/ipa \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED=NO
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
 
     - name: Upload IPA as Artifact
       uses: actions/upload-artifact@v2
