--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -42,15 +42,15 @@ jobs:
           -sdk iphoneos \
           -configuration Release \
           archive -archivePath build/ios/archive/Runner.xcarchive \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
-    - name: Export IPA without signing
+    - name: Create IPA without signing
       run: |
         xcodebuild -exportArchive \
           -archivePath build/ios/archive/Runner.xcarchive \
-          -exportOptionsPlist ios/Flutter/ExportOptions.plist \
           -exportPath build/ios/ipa \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+          -exportOptionsPlist <(echo '{ "compileBitcode": false, "signingStyle": "manual", "stripSwiftSymbols": false }') \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
     - name: Upload IPA as Artifact
       uses: actions/upload-artifact@v2
