--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -47,14 +47,26 @@ jobs:
     - name: Create ExportOptions.plist
       run: |
         cat <<EOF > ios/Flutter/ExportOptions.plist
-        {
-          "compileBitcode": false,
-          "signingStyle": "manual",
-          "stripSwiftSymbols": false,
-          "teamID": "",
-          "thinning": "<none>"
-        }
+        <?xml version="1.0" encoding="UTF-8"?>
+        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+        <plist version="1.0">
+        <dict>
+          <key>method</key>
+          <string>ad-hoc</string>
+          <key>compileBitcode</key>
+          <false/>
+          <key>signingStyle</key>
+          <string>manual</string>
+          <key>stripSwiftSymbols</key>
+          <false/>
+          <key>teamID</key>
+          <string></string>
+          <key>thinning</key>
+          <string><none></string>
+        </dict>
+        </plist>
         EOF
+
 
     - name: Create IPA without signing
       run: |
